--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,5 +52,7 @@
 			<string>fetch</string>
 			<string>remote-notification</string>
 	</array>
+	<key>NSBrightnessUsageDescription</key>
+	<string>This app adjusts screen brightness to improve user experience.</string>
 </dict>
 </plist>
