--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  screen_brightness: ^2.0.0+2
 
 dev_dependencies:
   flutter_test:
